--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               <ul>
 <li>Encountered an error?<ul>
 <li>If so then return false</li>
-<li>Else Double check o value<ul>
+<li>Else double check o value<ul>
 <li>If o happens to be truthy return true</li>
 <li>Else return false</li>
 </ul>
